# 7.5_chauscholder-practice

./: CMakeLists.txt  README.md  theory.tex
src/: chaus_task.cpp
